fix: in some themes, the chart tile had no contrast with the background

--- a/plugins/plugin-codeflare/web/scss/components/Dashboard/Charts.scss
+++ b/plugins/plugin-codeflare/web/scss/components/Dashboard/Charts.scss
@@ -25,7 +25,7 @@
 }
 
 @include ChartContainer {
-  background-color: var(--color-base01);
+  background-color: var(--color-base00);
 
   &.pf-c-tile {
     padding-left: 1em;
